About me, Eucation, Projects

--- a/index.html
+++ b/index.html
@@ -1,11 +1,51 @@
 <!DOCTYPE html>
 <meta charset="UTF-8">
 <html>
-<head>
-<link rel="stylesheet" type="text/css" href="style.css">
-<title>Dinescu Bogdan-George</title>
-</head>
-<body>
-<h1>Dinescu Bogdan-George</h1>
-</body>
+	<head>
+		<link rel="stylesheet" type="text/css" href="style.css">
+		<title>Bogdan-George Dinescu</title>
+	</head>
+	<body>
+	
+	<header>
+		<h1>Bogdan-George Dinescu</h1>
+		<p>Email: <a href="mailto:bogdanbogdan476@gmail.com">bogdanbogdan476@gmail.com</a></p>
+		<p>GitHub: <a href="https://github.com/BogdanDinescu" target="_blank">BogdanDinescu</a></p>
+	</header>
+	
+	<h2>About me</h2>
+	
+	<section class="flex">
+		<div class="profile">
+			<img src="eu.jpg">
+		</div>
+		<p>I am a hardworking and ambitious individual with a great passion for software development.
+		I love to learn everything that can improve my IT skills. 
+		I am currently finished my second year of studying Mathematics and Computer Science at University of Bucharest.
+		I am seeing an internship position in the industry in which I can put into practice my knowledge.</p>
+	</section>
+	
+	<h2>Education</h2>
+	<section>
+		<h3>Mathematics and Computer Science - University of Bucharest</h3>
+		<p class="subtext">Bachelor's degree</p>
+		<p class="subtext">2018 - 2021</p>
+	</section>
+	
+	<h2>Projects</h2>
+	<section>
+		<h3>EventiFind</h3>
+		<a href="https://github.com/BogdanDinescu/EventiFind">BogdanDinescu/EventiFind</a>
+		<p>A team project consisting of an android app. The app is written in Java. 
+		It allows users to find nearby events on the map, and see their scheduled events in the calendar. 
+		It uses location services to determine where the user is and Google Firebase for storing and retrieving data.</p>
+		<h3>Pe Linie</h3>
+		<a href="https://github.com/BogdanDinescu/pelinie">BogdanDinescu/pelinie</a>
+		<p>An online platform for sharing photos. 
+		I used Node.js for handling Ajax requests, MongoDB for storing all the data that users generate and javascript for the frontend.</p>
+	</section>
+	<footer>
+	
+	</footer>
+	</body>
 </html>
