--- a/index.html
+++ b/index.html
@@ -43,6 +43,13 @@
 		<a href="https://github.com/BogdanDinescu/pelinie">BogdanDinescu/pelinie</a>
 		<p>An online platform for sharing photos. 
 		I used Node.js for handling Ajax requests, MongoDB for storing all the data that users generate and javascript for the frontend.</p>
+		<h3>Procedural Programing Project</h3>
+		<p>The project was made in C.
+		The first part consisted in encrypting a bmp photo. The pixels were shuffled with the Durstenfeld shuffle algorithm starting from a key number. Using the same number, the image can be decrypted doing the same steps in reverse.
+		The second part was template matching digits in a bmp image by verifying the correlation of pixels.</p>
+		<h3>Mutex and semaphore</h3>
+		<p>Implementation of mutex and semaphore in OpenBSD. I implemented  them as spinlocks using atomic compare-and-swap operations.</p>
+
 	</section>
 	<footer>
 	
