--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 	
 	<h2>Projects</h2>
 	<section>
+		<h3><a href="https://github.com/BogdanDinescu/Java-Problem">Java Problem - Revomatico & Roweb</a></h3>
 		<h3>EventiFind</h3>
 		<a href="https://github.com/BogdanDinescu/EventiFind">BogdanDinescu/EventiFind</a>
 		<p>A team project consisting of an android app. The app is written in Java. 
@@ -51,8 +52,6 @@
 		<p>Implementation of mutex and semaphore in OpenBSD. I implemented  them as spinlocks using atomic compare-and-swap operations.</p>
 
 	</section>
-	<footer>
 	
-	</footer>
 	</body>
 </html>
