--- a/index.html
+++ b/index.html
@@ -34,16 +34,19 @@
 	
 	<h2>Projects</h2>
 	<section>
-		<h3><a href="https://github.com/BogdanDinescu/Java-Problem">Java Problem - Revomatico & Roweb</a></h3>
+		<h3><a href="https://github.com/BogdanDinescu/Java-Problem" target="_blank">Java Problem - Revomatico & Roweb</a></h3>
 		<h3>EventiFind</h3>
-		<a href="https://github.com/BogdanDinescu/EventiFind">BogdanDinescu/EventiFind</a>
+		<a href="https://github.com/BogdanDinescu/EventiFind" target="_blank">BogdanDinescu/EventiFind</a>
 		<p>A team project consisting of an android app. The app is written in Java. 
 		It allows users to find nearby events on the map, and see their scheduled events in the calendar. 
 		It uses location services to determine where the user is and Google Firebase for storing and retrieving data.</p>
 		<h3>Pe Linie</h3>
-		<a href="https://github.com/BogdanDinescu/pelinie">BogdanDinescu/pelinie</a>
+		<a href="https://github.com/BogdanDinescu/pelinie" target="_blank">BogdanDinescu/pelinie</a>
 		<p>An online platform for sharing photos. 
 		I used Node.js for handling Ajax requests, MongoDB for storing all the data that users generate and javascript for the frontend.</p>
+		<h3>Advanced object oriented programming</h3>
+		<a href="https://github.com/BogdanDinescu/ProiectPAO" target="_blank">BogdanDinescu/ProiectPAO</a>
+		<p>A small cinema management and ticketing app written in Java. I used Swing for frontend and JDBC for connecting to an Oracle database</p>
 		<h3>Procedural Programing Project</h3>
 		<p>The project was made in C.
 		The first part consisted in encrypting a bmp photo. The pixels were shuffled with the Durstenfeld shuffle algorithm starting from a key number. Using the same number, the image can be decrypted doing the same steps in reverse.
