--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 		I used Node.js for handling Ajax requests, MongoDB for storing all the data that users generate and javascript for the frontend.</p>
 		<h3>Advanced object oriented programming</h3>
 		<a href="https://github.com/BogdanDinescu/ProiectPAO" target="_blank">BogdanDinescu/ProiectPAO</a>
-		<p>A small cinema management and ticketing app written in Java. I used Swing for frontend and JDBC for connecting to an Oracle database</p>
+		<p>A small cinema management and ticketing app written in Java. I used Swing for frontend and JDBC for connecting to an Oracle database.</p>
 		<h3>Procedural Programing Project</h3>
 		<p>The project was made in C.
 		The first part consisted in encrypting a bmp photo. The pixels were shuffled with the Durstenfeld shuffle algorithm starting from a key number. Using the same number, the image can be decrypted doing the same steps in reverse.
