--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 	<header>
 		<h1>Bogdan-George Dinescu</h1>
 		<p>Email: <a href="mailto:bogdanbogdan476@gmail.com">bogdanbogdan476@gmail.com</a></p>
-		<p>GitHub: <a href="https://github.com/BogdanDinescu" target="_blank">BogdanDinescu</a></p>
+		<p>GitHub: <a href="https://github.com/BogdanDinescu" target="_blank">github.com/BogdanDinescu</a></p>
+		<p>GitLab: <a href="https://gitlab.com/BogdanDinescu" target="_blank">gitlab.com/BogdanDinescu</a></p>
 	</header>
 	
 	<h2>About me</h2>
