Added Internship and mdpub

--- a/index.html
+++ b/index.html
@@ -33,6 +33,16 @@
 		<p class="subtext">2018 - 2021</p>
 	</section>
 	
+	<h2>Experience</h2>
+	<section>
+		<h3>Rovomatico Internship</h3>
+		<p class="subtext">09.2020</p>
+		<p>By participating I’ve learned a lot about working in a larger team, principles of coding, test driven development, trunk based development, git, debug techniques and others. I worked on an internal project, made with Java Spring Framework and Vue.js for frontend.</p>
+		<h3>Software Development Center University of Bucharest</h3>
+		<p class="subtext">07.2020 - 09.2020</p>
+		<p>Application of management of internship documents. The app worked as a middleman between the student, companies and faculty. The app was made using ASP.NET and React.</p>
+	</section>
+	
 	<h2>Projects</h2>
 	<section>
 		<h3>EventiFind</h3>
