Finish Bachelor's degree

--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <html>
 	<head>
 		<link rel="stylesheet" type="text/css" href="style.css">
+		<script src = "script.js" type = "text/javascript"/></script>
 		<title>Bogdan-George Dinescu</title>
 	</head>
 	<body>
-	
+	<button id="button">Theme Dark</button>
 	<header>
 		<h1>Bogdan-George Dinescu</h1>
-		<p>Email: <a href="mailto:bogdanbogdan476@gmail.com">bogdanbogdan476@gmail.com</a></p>
+		<p>Email: <a href="mailto:bogdandinescu@tutanota.com">bogdandinescu@tutanota.com</a></p>
 		<p>GitHub: <a href="https://github.com/BogdanDinescu" target="_blank">github.com/BogdanDinescu</a></p>
 		<p>GitLab: <a href="https://gitlab.com/BogdanDinescu" target="_blank">gitlab.com/BogdanDinescu</a></p>
 	</header>
@@ -22,14 +23,16 @@
 		</div>
 		<p>I am a hardworking and ambitious individual with a great passion for software development.
 		I love to learn everything that can improve my IT skills. 
-		I am currently finished my second year of studying Mathematics and Computer Science at University of Bucharest.
+		I am currently in my first year of Software Engineering Master's degree.
 		I am seeing an internship position in the industry in which I can put into practice my knowledge.</p>
 	</section>
 	
 	<h2>Education</h2>
 	<section>
 		<h3>Mathematics and Computer Science - University of Bucharest</h3>
-		<p class="subtext">Bachelor's degree</p>
+		<strong>Master's degree in Software Engineering</strong>
+		<p class="subtext">2021 - 2023</p>
+		<strong>Bachelor's degree - grade 9.83 / 10</strong>
 		<p class="subtext">2018 - 2021</p>
 	</section>
 	
@@ -45,6 +48,11 @@
 	
 	<h2>Projects</h2>
 	<section>
+        <h3>Prism</h3>
+        <p class="subtext">Final Degree Project</p>
+        <a href="https://github.com/BogdanDinescu/Prism-frontend" target="_blank">BogdanDinescu/Prism-frontend</a><br>
+        <a href="https://github.com/BogdanDinescu/Prism-engine/" target="_blank">BogdanDinescu/Prism-engine</a>
+        <p>This is a news aggregator. The back-end part is written using .NET Core framework and the front-end part is made using the Angular framework. It collects news articles from many news sites every day (through rss). Using the SimHash algorithm, it groups news based on their similarity. The user selects which news sources to follow before seeing the news feed, they can also see weather information for the current location or a custom one. All user preferences are saved, and available on other devices they log in.</p>
 		<h3>EventiFind</h3>
 		<a href="https://github.com/BogdanDinescu/EventiFind" target="_blank">BogdanDinescu/EventiFind</a>
 		<p>A team project consisting of an android app. The app is written in Java. 
