--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		<p>I am a hardworking and ambitious individual with a great passion for software development.
 		I love to learn everything that can improve my IT skills. 
 		I am currently in my first year of Software Engineering Master's degree.
-		I am seeing an internship position in the industry in which I can put into practice my knowledge.</p>
+		I am seeing a position in the industry in which I can put into practice my knowledge.</p>
 	</section>
 	
 	<h2>Education</h2>
