--- a/index.html
+++ b/index.html
@@ -23,9 +23,7 @@
 			<img src="eu.jpg">
 		</div>
 		<p>I am a hardworking and ambitious individual with a great passion for software development.
-		I love to learn everything that can improve my IT skills. 
-		I am currently in my first year of Software Engineering Master's degree.
-		I am seeing a position in the industry in which I can put into practice my knowledge.</p>
+		I love to learn everything that can improve my IT skills. I am working at Lenovo as Java developer and I am currently in my second year of Software Engineering Master's degree.</p>
 	</section>
 	
 	<h2>Education</h2>
@@ -39,6 +37,9 @@
 	
 	<h2>Experience</h2>
 	<section>
+		<h3>Java Developer at Lenovo</h3>
+		<p class="subtext">11.2021 - present</p>
+		<p>I am currently working at Lenovo as Java developer, bringing value to the project and improving my skills. I am working with Java Spring, Spring Data, various databases like PostgreSQL and MongoDB, GNU/Linux, networking equipment and others.</p>
 		<h3>Rovomatico Internship</h3>
 		<p class="subtext">09.2020</p>
 		<p>By participating I’ve learned a lot about working in a larger team, principles of coding, test driven development, trunk based development, git, debug techniques and others. I worked on an internal project, made with Java Spring Framework and Vue.js for frontend.</p>
