--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
 		<div class="profile">
 			<img src="eu.jpg">
 		</div>
-		<p>I am a hardworking and ambitious individual with a great passion for software development.
-		I love to learn everything that can improve my IT skills. I am working at Lenovo as Java developer and I am currently in my second year of Software Engineering Master's degree.</p>
+		<p>Hi 👋. I'm a software engineer working at constantly improving the products I'm working on and enhancing my skills. Apart from developing and fixing bugs, I also provide technical advice to my colleagues and talk with our customers to understand their issues and solve them.
+			My colleagues would describe me as a key member of the team.
+			I successfully led a team of 3 students during the summer internship of 2023 in designing and developing a project that would add value to our existing products.</p>
 	</section>
 	
 	<h2>Education</h2>
@@ -37,9 +38,9 @@
 	
 	<h2>Experience</h2>
 	<section>
-		<h3>Java Developer at Lenovo</h3>
+		<h3>Software Engineer at Lenovo</h3>
 		<p class="subtext">11.2021 - present</p>
-		<p>I am currently working at Lenovo as Java developer, bringing value to the project and improving my skills. I am working with Java Spring, Spring Data, various databases like PostgreSQL and MongoDB, GNU/Linux, networking equipment and others.</p>
+		<p>I am currently working at Lenovo as a Software Engineer, bringing value to multiple projects. I am working with NodeJS, Java Spring, various databases like PostgreSQL and MongoDB, GNU/Linux, networking equipment and others.</p>
 		<h3>Rovomatico Internship</h3>
 		<p class="subtext">09.2020</p>
 		<p>By participating I’ve learned a lot about working in a larger team, principles of coding, test driven development, trunk based development, git, debug techniques and others. I worked on an internal project, made with Java Spring Framework and Vue.js for frontend.</p>
@@ -64,16 +65,6 @@
 		<a href="https://github.com/BogdanDinescu/pelinie" target="_blank">BogdanDinescu/pelinie</a>
 		<p>An online platform for sharing photos. 
 		I used Node.js for handling Ajax requests, MongoDB for storing all the data that users generate and javascript for the frontend.</p>
-		<h3>Advanced object oriented programming</h3>
-		<a href="https://github.com/BogdanDinescu/ProiectPAO" target="_blank">BogdanDinescu/ProiectPAO</a>
-		<p>A small cinema management and ticketing app written in Java. I used Swing for frontend and JDBC for connecting to an Oracle database.</p>
-		<h3>Procedural Programing Project</h3>
-		<p>The project was made in C.
-		The first part consisted in encrypting a bmp photo. The pixels were shuffled with the Durstenfeld shuffle algorithm starting from a key number. Using the same number, the image can be decrypted doing the same steps in reverse.
-		The second part was template matching digits in a bmp image by verifying the correlation of pixels.</p>
-		<h3>Mutex and semaphore</h3>
-		<p>Implementation of mutex and semaphore in OpenBSD. I implemented  them as spinlocks using atomic compare-and-swap operations.</p>
-
 	</section>
 	
 	</body>
